UPDATE  input display

--- a/public/index.html
+++ b/public/index.html
@@ -167,6 +167,8 @@
         border: none;
         outline: none;
         box-sizing: border-box;
+        white-space: nowrap;
+        display: block;
     }
     /* span.cell-input:focus {
         outline: 2px solid rgb(41, 105, 223);
