--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,9 @@
         text-align: center;
         display: table-cell;
         background-color: #fefefe;
+        position: relative;
     }
+
 
     div.cell:hover {
         border: 2px solid rgb(74, 213, 255);
@@ -123,6 +125,16 @@
     .col-name div.cell:first-child {
         border-left: 0.5px solid var(--border-dark);
     }
+
+    .col-name div.cell .header-grabber {
+        position: absolute;
+        top: 0;
+        right: -5px;
+        width: 10px;
+        height: 100%;
+        cursor: col-resize;
+        z-index: 1000;
+    }
     
     .row {
         /* display: table-row; */
@@ -132,6 +144,31 @@
         max-height: 21px;
         min-height: 21px;
         width: max-content;
+    }
+    .row.selected:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: var(--indexes-size);
+        width: calc(100% - var(--indexes-size));
+        height: 100%;
+        background-color: rgb(11, 140, 226);
+        z-index: 200;
+        opacity: .2;
+    }
+    .cell:not(.index).selected:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgb(11, 140, 226);
+        z-index: 200;
+        opacity: .2;
+    }
+    .cell.index {
+        z-index: 500;
     }
     .rows {
         display: table;
