Hide master input

--- a/public/index.html
+++ b/public/index.html
@@ -301,7 +301,7 @@
             <li><a href="#">Format</a></li>
             <li><a href="#">Aide</a></li>
         </ul>
-        <div id="input" class="show">
+        <div id="input" class="">
             <input id="masterInput" name="master-input" class="master-input" type="text">
         </div>
     </header>
